Bold Header for Terms of Service

--- a/MyHome/app/src/main/assets/tos.html
+++ b/MyHome/app/src/main/assets/tos.html
@@ -248,7 +248,7 @@
     </style>
   </head>
   <body>
-    <div class="patient-privacy-noti ">
+    <div class="patient-privacy-noti bold">
       Patient Privacy<br />Notice
     </div>
     <div class="joint-notice-of-priv bold">
