fixed 10518 : TOS phone numbers on enrollment are not clickable on Android

--- a/MyHome/app/src/main/assets/tos.html
+++ b/MyHome/app/src/main/assets/tos.html
@@ -399,13 +399,13 @@ All written requests or requests for review of denials should be given to our Fa
       Do you have concerns or complaints?
     </div>
     <div class="if-you-think-your-pr">
-      If you think your privacy rights may have been violated, you may contact the Dignity Health Compliance Office Hotline at 800-443-1986 or by email at privacy.office@dignityhealth.org. Finally, you may send a written complaint to the U.S. Department of Health and Human Services, Office of Civil Rights. Our Facility Compliance Office can provide you the address. We will not take any action against you for filing a complaint.<br /><br />
+      If you think your privacy rights may have been violated, you may contact the Dignity Health Compliance Office Hotline at <a href="tel:800-443-1986">800-443-1986</a> or by email at <a href="mailto:privacy.office@dignityhealth.org">privacy.office@dignityhealth.org</a>. Finally, you may send a written complaint to the U.S. Department of Health and Human Services, Office of Civil Rights. Our Facility Compliance Office can provide you the address. We will not take any action against you for filing a complaint.<br /><br />
 
 DIGNITY HEALTH COMPLIANCE OFFICE<br /><br />
 
-Dignity Health Compliance Office Phone: 800-443-1986<br /><br />
+Dignity Health Compliance Office Phone: <a href="tel:800-443-1986">800-443-1986</a><br /><br />
 
-Dignity Health Compliance Office Fax: 415-591-6279<br /><br />
+Dignity Health Compliance Office Fax: <a href="tel:415-591-6279">415-591-6279</a><br /><br />
 
 VERSION EFFECTIVE: May 2015<br /><br />
 
